Galaxy Grocers/force-app/main/default/objects/Inventory__c/fields/Current_Stock_Level__c.field-meta.xml
<CustomField>
    <fullName>Current_Stock_Level__c</fullName>
    <label>Current Stock Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>