Galaxy Grocers/force-app/main/default/objects/Inventory__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Name (Text) – The name of the product (e.g., “Organic Apples”).</description>
    <inlineHelpText>Name of the Product</inlineHelpText>
    <label>Name</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>