Galaxy Grocers/force-app/main/default/objects/Inventory__c/validationRules/ExpiryDateVR.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpiryDateVR</fullName>
    <active>true</active>
    <description>Expiry Dates can’t be in the past.</description>
    <errorConditionFormula>Expiration_Date__c &gt; NOW()</errorConditionFormula>
    <errorDisplayField>Expiration_Date__c</errorDisplayField>
    <errorMessage>Expiry Dates can’t be in the Past Date.</errorMessage>
</ValidationRule>