Galaxy Grocers/force-app/main/default/objects/Inventory__c/validationRules/Reorder_Threshold_VR.validationRule-meta.xml
<ValidationRule>
    <fullName>Reorder_Threshold_VR</fullName>
    <active>false</active>
    <description>Reorder Threshold is not greater than Current Stock Level</description>
    <errorConditionFormula>Reorder_Threshold__c &gt; Current_Stock_Level__c</errorConditionFormula>
    <errorDisplayField>Reorder_Threshold__c</errorDisplayField>
    <errorMessage>Reorder Threshold is not greater than Current Stock Level</errorMessage>
</ValidationRule>