Galaxy Grocers/force-app/main/default/objects/Inventory__c/listViews/Purchasing_Team_Queue_Inventory.listView-meta.xml
<ListView>
    <fullName>Purchasing_Team_Queue_Inventory</fullName>
    <filterScope>Queue</filterScope>
    <label>Purchasing Team Queue</label>
    <queue>Purchasing_Team_Queue</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>